nginx/k8s/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  # namespace: try
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.15.7-alpine
        ports:
        - containerPort: 80
